fix z-index conflict in mobile header

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -9,6 +9,7 @@
   padding: 0 16px;
   color: white;
   position: relative;
+  z-index: 1000;
 }
 
 .header a {
@@ -122,6 +123,7 @@
   padding: 16px;
   padding-bottom: 40px;
   gap: 32px;
+  z-index: 999;
 }
 .mobileLink {
   display: flex;
